docs/errors/examples/undefined-method-on-int/undefined-method-on-int.grob
// E0006 — calling a string method on an int value
// Eventual path: docs/errors/examples/undefined-method-on-int/undefined-method-on-int.grob
score := 42
print(score.toLower())
